Cabal-Version:       >= 1.1.4
Name:                cairo-appbase
Version:             0.1
Description:         Base code for an application using Cairo graphics
License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conradp@cse.unsw.edu.au
Build-Depends:       base, glib, gtk, glade, cairo
Data-Files:          data/main.glade

Executable:          cairo-appbase
Main-Is:             cairo-appbase.hs
Hs-Source-Dirs:      src
ghc-options:         -Wall -fglasgow-exts -O2 -funbox-strict-fields 
